[build-system]
# Require setuptools >= 68.0.0 for modern Python packaging
# Require Cython >= 3.0 for Python 3.12+ compatibility
requires = ["setuptools>=68.0.0", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
# Skip building against musl libc images as JSBSim is not compatible with them.
# Skip Python 3.8 and 3.9 (EOL or approaching EOL)
skip = "cp*-musllinux_* cp38-* cp39-* pp38-* pp39-*"
